<resources>
    <string name="app_name">StockWatchIt</string>
    <string name="no_item_added">No item added yet</string>
    <string name="no_item">No item found</string>
    <string name="sorted_activity">Sorted Stocks</string>
    <string name="nasdaq">NASDAQ</string>
    <string name="tsx">TSX</string>
    <string name="temp_stock">facebook</string>
    <string name="temp_stockPrice">2000</string>
    <string name="nyse">NYSE</string>
    <string name="favourite">FAVOURITES</string>
    <string name="temp_time">12:18PM</string>
    <string name="stock_markets">Stock Markets</string>
    <string name="tempAlphabet">A</string>
</resources>