<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".StockMarketArangementActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="5dp"
            android:id="@+id/textViewStockMarketNameMarketArrangement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/stock_markets"
            android:textAlignment="center"
            android:textColor="@color/white" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textViewStockMarketNameMarketArrangement"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewFavourite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:fontFamily="@font/comfortaa"
                        android:padding="1dp"
                        android:text="@string/favourite"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/cardViewTSX"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:fontFamily="@font/comfortaa"
                        android:padding="1dp"
                        android:text="@string/tsx"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/cardViewNYSE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:fontFamily="@font/comfortaa"
                        android:padding="1dp"
                        android:text="@string/nyse"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/cardViewNASDAK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical"
                        android:layout_margin="1dp"
                        android:fontFamily="@font/comfortaa"
                        android:padding="1dp"
                        android:text="@string/nasdaq"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</RelativeLayout>